removing styles that made these pages rtl(did it with making theme rtl)

--- a/src/app/pages/insurance/third-person/list/third-person-companies.component.html
+++ b/src/app/pages/insurance/third-person/list/third-person-companies.component.html
@@ -1,5 +1,5 @@
 <nb-card>
-  <nb-card-header style="text-align: right">
+  <nb-card-header>
     بیمه شخص ثالث - شرکت بیمه ای مدنظر خود را پیدا کنید
   </nb-card-header>
 
