--- a/src/app/pages/insurance/third-person/submission/third-person-submission.component.html
+++ b/src/app/pages/insurance/third-person/submission/third-person-submission.component.html
@@ -1,16 +1,16 @@
 <nb-card>
-  <nb-card-header style="text-align: right">بیمه شخص ثالث - اطلاعات لازم را وارد کنید</nb-card-header>
-  <nb-card-body style="direction: rtl">
-    <form (ngSubmit)="onSubmit()">
+  <nb-card-header >بیمه شخص ثالث - اطلاعات لازم را وارد کنید</nb-card-header>
+  <nb-card-body>
+    <form (ngSubmit)="goToPayment()">
       <div class="row">
         <div class="col-sm-6">
-          <div class="form-group" style="text-align: right">
+          <div class="form-group" >
             <label for="provinent" class="label">استان</label>
             <input type="text" nbInput fullWidth id="provinent">
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="form-group" style="text-align: right">
+          <div class="form-group" >
             <label for="city" class="label">شهر</label>
             <input type="text" nbInput fullWidth id="city">
           </div>
@@ -18,13 +18,13 @@
       </div>
       <div class="row">
         <div class="col-sm-6">
-          <div class="form-group" style="text-align: right">
+          <div class="form-group" >
             <label for="nationalCode" class="label">کد ملی</label>
             <input type="text" nbInput fullWidth id="nationalCode">
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="form-group" style="text-align: right">
+          <div class="form-group" >
             <label for="mobile" class="label">موبایل</label>
             <input type="text" nbInput fullWidth id="mobile">
           </div>
@@ -32,13 +32,13 @@
       </div>
       <div class="row">
         <div class="col-sm-6">
-          <div class="form-group" style="text-align: right">
+          <div class="form-group" >
             <label for="phone" class="label">تلفن ثابت</label>
             <input type="text" nbInput fullWidth id="phone">
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="form-group" style="text-align: right">
+          <div class="form-group" >
             <label for="email" class="label">ایمیل</label>
             <input type="text" nbInput fullWidth id="email">
           </div>
@@ -46,13 +46,13 @@
       </div>
       <div class="row">
         <div class="col-sm-6">
-          <div class="form-group" style="text-align: right">
+          <div class="form-group" >
             <label for="postalCode" class="label">کد پستی</label>
             <input type="text" nbInput fullWidth id="postalCode">
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="form-group" style="text-align: right">
+          <div class="form-group" >
             <label for="adr" class="label">آدرس</label>
             <textarea rows="3" id="adr" nbInput fullWidth shape="round"></textarea>
           </div>
@@ -60,7 +60,7 @@
       </div>
       <div class="row">
         <div class="col-sm-12">
-          <div class="form-group" style="text-align: right">
+          <div class="form-group" >
             <nb-checkbox style="margin-left: 1rem"><span>&nbsp;&nbsp;&nbsp;</span><span>جهت ارسال تصاویر مدارک با ایمیل یا تلگرام کلیک کنید</span>
             </nb-checkbox>
           </div>
@@ -68,7 +68,7 @@
       </div>
       <div class="row">
         <div class="col-sm-3">
-          <div class="form-group" style="text-align: right">
+          <div class="form-group" >
             <label for="frontOfCardImage">تصویر روی کارت ماشین</label>
             <input hidden type="file" #uploader1 id="frontOfCardImage">
             <br>
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="form-group" style="text-align: right">
+          <div class="form-group" >
             <label for="backOfCardImage">تصویر پشت کارت ماشین</label>
             <input hidden type="file" #uploader2 id="backOfCardImage">
             <br>
@@ -84,7 +84,7 @@
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="form-group" style="text-align: right">
+          <div class="form-group" >
             <label for="nationalCardImage">تصویر کارت ملی</label>
             <input hidden type="file" #uploader3 id="nationalCardImage">
             <br>
@@ -92,7 +92,7 @@
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="form-group" style="text-align: right">
+          <div class="form-group" >
             <label for="insuranceImage">تصویر کامل بیمه نامه</label>
             <input hidden type="file" #uploader4 id="insuranceImage">
             <br>
@@ -101,13 +101,8 @@
         </div>
       </div>
 
-      <button type="submit" nbButton>ثبت سفارش و پرداخت</button>
+      <button style="margin-top: 50px" type="submit" nbButton>ثبت سفارش و پرداخت</button>
     </form>
   </nb-card-body>
 </nb-card>
-<style>
-  .select-button {
-    text-align: right;
-    direction: rtl;
-  }
-</style>
+
