--- a/src/app/pages/auth/login/login-component.html
+++ b/src/app/pages/auth/login/login-component.html
@@ -1,5 +1,5 @@
-<!--<h1 id="title" class="title">سامانه جامع رفاهی صندوق مشترک نظام مهندسی استان ها</h1>-->
-<p class="sub-title">سامانه جامع رفاهی صندوق مشترک نظام مهندسی استان ها</p>
+<h2 id="title" class="title">سامانه رفاهی صندوق نظام مهندسی</h2>
+<!--<p class="sub-title">سامانه جامع رفاهی صندوق مشترک نظام مهندسی استان ها</p>-->
 
 <form (ngSubmit)="myLogin()" #form="ngForm" aria-labelledby="title">
 
