admin users and products implementation

--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -18,7 +18,7 @@
     <nb-action class="user-action" *nbIsGranted="['view', 'user']" >
       <nb-user [nbContextMenu]="userMenu"
                [onlyPicture]="userPictureOnly"
-               [name]="'علیرضا قایخلو'"
+               [name]="''"
                [picture]="'/assets/images/default-profile.png'">
       </nb-user>
     </nb-action>
