--- a/src/app/pages/admin/reports/echarts.component.html
+++ b/src/app/pages/admin/reports/echarts.component.html
@@ -5,17 +5,15 @@
         <div class="row show-grid">
           <div class="col-4 col-sm-4">
             <div>
-              <nb-select selected="1">
-                <nb-option value="1">Option 1</nb-option>
-                <nb-option value="2">Option 2</nb-option>
+              <nb-select [(ngModel)]="selectedStateModel" (selectedChange)="selectedStateChanged()">
+                <nb-option *ngFor="let item of states" value="{{item.value}}">{{item.title}}</nb-option>
               </nb-select>
             </div>
           </div>
           <div class="col-4 col-sm-4">
             <div>
-              <nb-select selected="1">
-                <nb-option value="1">Option 1</nb-option>
-                <nb-option value="2">Option 2</nb-option>
+              <nb-select [(ngModel)]="selectedCityModel" (selectedChange)="selectedCityChanged()">
+                <nb-option *ngFor="let item of selectedState.cities" value="{{item.value}}">{{item.title}}</nb-option>
               </nb-select>
             </div>
           </div>
@@ -30,7 +28,23 @@
         </div>
       </nb-card-header>
       <nb-card-body>
-        <ngx-echarts-pie></ngx-echarts-pie>
+        <ngx-echarts-pie [draw]="eventsSubject.asObservable()"></ngx-echarts-pie>
+      </nb-card-body>
+    </nb-card>
+  </div>
+  <div class="col-lg-6">
+    <nb-card>
+      <nb-card-header>Bar</nb-card-header>
+      <nb-card-body>
+        <ngx-echarts-bar></ngx-echarts-bar>
+      </nb-card-body>
+    </nb-card>
+  </div>
+  <div class="col-lg-6">
+    <nb-card>
+      <nb-card-header>Line</nb-card-header>
+      <nb-card-body>
+        <ngx-echarts-line></ngx-echarts-line>
       </nb-card-body>
     </nb-card>
   </div>
@@ -42,19 +56,27 @@
       </nb-card-body>
     </nb-card>
   </div>
-<!--  <div class="col-lg-6">-->
-<!--    <nb-card>-->
-<!--      <nb-card-header>Area Stack</nb-card-header>-->
-<!--      <nb-card-body>-->
-<!--        <ngx-echarts-area-stack></ngx-echarts-area-stack>-->
-<!--      </nb-card-body>-->
-<!--    </nb-card>-->
-<!--  </div>-->
   <div class="col-lg-6">
     <nb-card>
-      <nb-card-header>Bar</nb-card-header>
+      <nb-card-header>Area Stack</nb-card-header>
       <nb-card-body>
-        <ngx-echarts-bar></ngx-echarts-bar>
+        <ngx-echarts-area-stack></ngx-echarts-area-stack>
+      </nb-card-body>
+    </nb-card>
+  </div>
+  <div class="col-lg-6">
+    <nb-card>
+      <nb-card-header>Bar Animation</nb-card-header>
+      <nb-card-body>
+        <ngx-echarts-bar-animation></ngx-echarts-bar-animation>
+      </nb-card-body>
+    </nb-card>
+  </div>
+  <div class="col-lg-6">
+    <nb-card>
+      <nb-card-header>Radar</nb-card-header>
+      <nb-card-body>
+        <ngx-echarts-radar></ngx-echarts-radar>
       </nb-card-body>
     </nb-card>
   </div>
