--- a/src/app/pages/admin/reports/echarts.component.html
+++ b/src/app/pages/admin/reports/echarts.component.html
@@ -3,25 +3,17 @@
     <nb-card>
       <nb-card-header>
         <div class="row show-grid">
-          <div class="col-4 col-sm-4">
+          <div class="col-6 col-sm-6">
             <div>
               <nb-select [(ngModel)]="selectedStateModel" (selectedChange)="selectedStateChanged()">
                 <nb-option *ngFor="let item of states" value="{{item.value}}">{{item.title}}</nb-option>
               </nb-select>
             </div>
           </div>
-          <div class="col-4 col-sm-4">
+          <div class="col-6 col-sm-6">
             <div>
               <nb-select [(ngModel)]="selectedCityModel" (selectedChange)="selectedCityChanged()">
                 <nb-option *ngFor="let item of selectedState.cities" value="{{item.value}}">{{item.title}}</nb-option>
-              </nb-select>
-            </div>
-          </div>
-          <div class="col-4 col-sm-4">
-            <div>
-              <nb-select selected="1">
-                <nb-option value="1">Option 1</nb-option>
-                <nb-option value="2">Option 2</nb-option>
               </nb-select>
             </div>
           </div>
@@ -34,9 +26,26 @@
   </div>
   <div class="col-lg-6">
     <nb-card>
-      <nb-card-header>Bar</nb-card-header>
+      <nb-card-header>
+        <div class="row show-grid">
+          <div class="col-6 col-sm-6">
+            <div>
+              <nb-select [(ngModel)]="selectedStateModel" (selectedChange)="selectedStateChanged()">
+                <nb-option *ngFor="let item of states" value="{{item.value}}">{{item.title}}</nb-option>
+              </nb-select>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6">
+            <div>
+              <nb-select [(ngModel)]="selectedCityModel" (selectedChange)="selectedCityChanged()">
+                <nb-option *ngFor="let item of selectedState.cities" value="{{item.value}}">{{item.title}}</nb-option>
+              </nb-select>
+            </div>
+          </div>
+        </div>
+      </nb-card-header>
       <nb-card-body>
-        <ngx-echarts-bar></ngx-echarts-bar>
+        <ngx-echarts-bar [draw]="eventsSubject.asObservable()"></ngx-echarts-bar>
       </nb-card-body>
     </nb-card>
   </div>
