--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="row show-grid">
   <div class="col-12 col-sm-6 col-md-3">
     <div>
-      <nb-card (click)="gotoWhereClicked('/pages/insurance')" _ngcontent-ymx-c22="">
+      <nb-card (click)="gotoWhereClicked('/pages/insurance')" _ngcontent-ymx-c22="" style="cursor: pointer">
         <nb-card-body _ngcontent-ymx-c22=""><div class="menu-pics" style="background: url('assets/images/insurance.jpg')"></div>
           <nb-alert status="primary" class="menu-bottom-text">
             <strong>بیمه</strong>
