--- a/src/app/pages/miscellaneous/not-found/not-found.component.html
+++ b/src/app/pages/miscellaneous/not-found/not-found.component.html
@@ -3,10 +3,10 @@
     <nb-card>
       <nb-card-body>
         <div class="flex-centered col-xl-4 col-lg-6 col-md-8 col-sm-12">
-          <h2 class="title">404 Page Not Found</h2>
-          <small class="sub-title">The page you were looking for doesn't exist</small>
+          <h2 class="title">صفحه یافت نشد</h2>
+          <small class="sub-title">صفحه مورد نظر شما یافت نشد</small>
           <button (click)="goToHome()" type="button" class="btn btn-block btn-hero-primary">
-            Take me home
+            خانه
           </button>
         </div>
       </nb-card-body>
