--- a/src/app/pages/admin/products/list.component.html
+++ b/src/app/pages/admin/products/list.component.html
@@ -4,7 +4,7 @@
   </nb-card-header>
 
   <nb-card-body>
-    <ng2-smart-table [settings]="settings" [source]="source" (editConfirm)="onEdit($event)">
+    <ng2-smart-table style="direction: ltr" [settings]="settings" [source]="source" (editConfirm)="onEdit($event)">
     </ng2-smart-table>
   </nb-card-body>
 </nb-card>
