implementing transportation - plane

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -34,7 +34,7 @@
   </div>
   <div class="col-12 col-sm-6 col-md-3">
     <div>
-      <nb-card _ngcontent-ymx-c22="">
+      <nb-card _ngcontent-ymx-c22="" (click)="gotoWhereClicked('/pages/transport')" style="cursor: pointer">
         <nb-card-body _ngcontent-ymx-c22=""><div class="menu-pics" style="background: url('assets/images/transport.jpg')"></div>
           <nb-alert status="primary" class="menu-bottom-text">
             <strong>خدمات حمل و نقل</strong>
