--- a/src/app/pages/insurance/home/insurance-menu.component.html
+++ b/src/app/pages/insurance/home/insurance-menu.component.html
@@ -4,7 +4,7 @@
       <nb-card (click)="gotoWhereClicked('/pages/insurance/inquiry')" _ngcontent-ymx-c22="" style="cursor: pointer">
         <nb-card-body _ngcontent-ymx-c22=""><div class="menu-pics" style="background: url('assets/images/insurance.jpg')"></div>
           <nb-alert status="primary" class="menu-bottom-text">
-            <strong>شخص ثالث</strong>
+            <strong>بیمه شخص ثالث</strong>
           </nb-alert>
         </nb-card-body>
       </nb-card>
@@ -15,7 +15,7 @@
       <nb-card _ngcontent-ymx-c22="">
         <nb-card-body _ngcontent-ymx-c22=""><div class="menu-pics" style="background: url('assets/images/loan.jpg')"></div>
           <nb-alert status="primary" class="menu-bottom-text">
-            <strong>اعطای تسهیلات</strong>
+            <strong>بیمه بدنه</strong>
           </nb-alert>
         </nb-card-body>
       </nb-card>
@@ -26,7 +26,7 @@
       <nb-card _ngcontent-ymx-c22="">
         <nb-card-body _ngcontent-ymx-c22=""><div class="menu-pics" style="background: url('assets/images/installment.jpg')"></div>
           <nb-alert status="primary" class="menu-bottom-text">
-            <strong>خرید اقساطی</strong>
+            <strong>بیمه تکمیل درمان</strong>
           </nb-alert>
         </nb-card-body>
       </nb-card>
@@ -37,7 +37,7 @@
       <nb-card _ngcontent-ymx-c22="">
         <nb-card-body _ngcontent-ymx-c22=""><div class="menu-pics" style="background: url('assets/images/transport.jpg')"></div>
           <nb-alert status="primary" class="menu-bottom-text">
-            <strong>خدمات حمل و نقل</strong>
+            <strong>بیمه آتش سوزی</strong>
           </nb-alert>
         </nb-card-body>
       </nb-card>
