--- a/src/app/pages/insurance/third-person/inquiry/inquiry-component.html
+++ b/src/app/pages/insurance/third-person/inquiry/inquiry-component.html
@@ -77,7 +77,7 @@
         </div>
       </div>
 
-      <button nbButton style="margin-left: 15px" (click)="openSmsInquiryPopup()">ارسال کد پیامکی</button>
+      <button type="button" nbButton style="margin-left: 15px" (click)="openSmsInquiryPopup()">ارسال کد پیامکی</button>
       <button type="submit" nbButton>استعلام آنلاین</button>
     </form>
   </nb-card-body>
