--- a/src/app/pages/insurance/third-person/inquiry/sms-popup/sms-popup.component.html
+++ b/src/app/pages/insurance/third-person/inquiry/sms-popup/sms-popup.component.html
@@ -4,7 +4,7 @@
     <input #name nbInput style="text-align: right" placeholder="شماره موبایل">
   </nb-card-body>
   <nb-card-footer>
+    <button nbButton status="success" style="margin-left: 3px" (click)="submit(name.value)">ارسال</button>
     <button class="cancel" nbButton status="danger" (click)="cancel()">انصراف</button>
-    <button nbButton status="success" (click)="submit(name.value)">ارسال</button>
   </nb-card-footer>
 </nb-card>
